# otel-haskell-sdk

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  docker-compose.yml  otel-haskell-sdk.cabal
.github/workflows/: formatting-linting.yml  haskell-ci.yml
app/: Main.hs
bench/: Bench.hs
docker/: otel-collector-config.yml
docker/grafana-provisioning/dashboards/: logs.json
docker/grafana-provisioning/datasources/: datasource.yml
example/: docker-compose.yml  example-otel.cabal
example/docker/grafana-provisioning/datasources/: datasource.yml
example/src/: Main.hs
protocol/: otel-protocol.cabal
protocol/src/Proto/Opentelemetry/Proto/Collector/Logs/V1/: LogsService.hs
protocol/src/Proto/Opentelemetry/Proto/Collector/Metrics/V1/: MetricsService.hs
protocol/src/Proto/Opentelemetry/Proto/Collector/Trace/V1/: TraceService.hs  TraceService_Fields.hs
protocol/src/Proto/Opentelemetry/Proto/Common/V1/: Common_Fields.hs
protocol/src/Proto/Opentelemetry/Proto/Logs/V1/: Logs.hs  Logs_Fields.hs
protocol/src/Proto/Opentelemetry/Proto/Metrics/V1/: Metrics.hs
protocol/src/Proto/Opentelemetry/Proto/Resource/V1/: Resource.hs  Resource_Fields.hs
scripts/: fix-formatting.sh  generate-protocol.sh
src/: Lib.hs
src/Otel/: Client.hs  Effect.hs  Type.hs
src/Otel/Effect/: Static.hs
src/Otel/Internal/: Client.hs  OtelQueue.hs  Type.hs
test/: Tests.hs
