cabal-version:   3.6
name:            otel-haskell-sdk
version:         0.1.0
category:        OpenTelemetry
homepage:        https://github.com/Siprj/otel-haskell-sdk#readme
bug-reports:     https://github.com/Siprj/otel-haskell-sdk/issues
author:          Jan Šipr
maintainer:      sipr.jan@gmail.com
copyright:       Copyright: (c) 2022 Jan Šipr
license:         MIT
license-file:    LICENSE
build-type:      Simple
tested-with:     GHC ==9.2.8 || ==9.4.5 || ==9.6.2
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/Siprj/otel-haskell-sdk

flag pedantic
  description: Pass additional warning flags and -Werror to GHC.
  manual:      True
  default:     True

common common-stanza
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeFamilies

common common-ghc-options
  if flag(pedantic)
    ghc-options: -Werror

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-deriving-strategies
    -Wmissing-export-lists -Wpartial-fields -Wredundant-constraints

common common-ghc-executable-options
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:          common-stanza
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Otel.Client
    Otel.Effect
    Otel.Effect.Static
    Otel.Internal.Client
    Otel.Internal.OtelQueue
    Otel.Internal.Type
    Otel.Type

  build-depends:
    , base
    , bytestring
    , containers
    , effectful-core
    , exceptions
    , http-client
    , http-types
    , microlens
    , otel-haskell-sdk:otlp
    , proto-lens
    , random
    , stm
    , text
    , time
    , vector

library otlp
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Werror
  hs-source-dirs:   generated
  exposed-modules:
    Proto.Opentelemetry.Proto.Collector.Logs.V1.LogsService
    Proto.Opentelemetry.Proto.Collector.Logs.V1.LogsService_Fields
    Proto.Opentelemetry.Proto.Collector.Metrics.V1.MetricsService
    Proto.Opentelemetry.Proto.Collector.Metrics.V1.MetricsService_Fields
    Proto.Opentelemetry.Proto.Collector.Trace.V1.TraceService
    Proto.Opentelemetry.Proto.Collector.Trace.V1.TraceService_Fields
    Proto.Opentelemetry.Proto.Common.V1.Common
    Proto.Opentelemetry.Proto.Common.V1.Common_Fields
    Proto.Opentelemetry.Proto.Logs.V1.Logs
    Proto.Opentelemetry.Proto.Logs.V1.Logs_Fields
    Proto.Opentelemetry.Proto.Metrics.V1.Metrics
    Proto.Opentelemetry.Proto.Metrics.V1.Metrics_Fields
    Proto.Opentelemetry.Proto.Resource.V1.Resource
    Proto.Opentelemetry.Proto.Resource.V1.Resource_Fields
    Proto.Opentelemetry.Proto.Trace.V1.Trace
    Proto.Opentelemetry.Proto.Trace.V1.Trace_Fields

  build-depends:    proto-lens-runtime

test-suite otel-haskell-sdk-test
  import:         common-stanza
  import:         common-ghc-options
  import:         common-ghc-executable-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Tests.hs
  build-depends:
    , base
    , otel-haskell-sdk
    , tasty
    , tasty-hunit
