cabal-version: 3.6
name:          otel-protocol
version:       0.1.0
category:      OpenTelemetry
homepage:      https://github.com/Siprj/otel-haskell-sdk#readme
bug-reports:   https://github.com/Siprj/otel-haskell-sdk/issues
author:        Jan Šipr
maintainer:    sipr.jan@gmail.com
copyright:     Copyright: (c) 2022 Jan Šipr
license:       MIT
build-type:    Simple
tested-with:   GHC ==9.2.8 || ==9.4.5 || ==9.6.2

source-repository head
  type:     git
  location: https://github.com/Siprj/otel-haskell-sdk

common common-stanza
  default-language: Haskell2010

common common-ghc-options
  ghc-options: -Wall -Wcompat -Werror

common common-ghc-executable-options
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:          common-stanza
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Proto.Opentelemetry.Proto.Collector.Logs.V1.LogsService
    Proto.Opentelemetry.Proto.Collector.Logs.V1.LogsService_Fields
    Proto.Opentelemetry.Proto.Collector.Metrics.V1.MetricsService
    Proto.Opentelemetry.Proto.Collector.Metrics.V1.MetricsService_Fields
    Proto.Opentelemetry.Proto.Collector.Trace.V1.TraceService
    Proto.Opentelemetry.Proto.Collector.Trace.V1.TraceService_Fields
    Proto.Opentelemetry.Proto.Common.V1.Common
    Proto.Opentelemetry.Proto.Common.V1.Common_Fields
    Proto.Opentelemetry.Proto.Logs.V1.Logs
    Proto.Opentelemetry.Proto.Logs.V1.Logs_Fields
    Proto.Opentelemetry.Proto.Metrics.V1.Metrics
    Proto.Opentelemetry.Proto.Metrics.V1.Metrics_Fields
    Proto.Opentelemetry.Proto.Resource.V1.Resource
    Proto.Opentelemetry.Proto.Resource.V1.Resource_Fields
    Proto.Opentelemetry.Proto.Trace.V1.Trace
    Proto.Opentelemetry.Proto.Trace.V1.Trace_Fields

  build-depends:   proto-lens-runtime
